--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -14,7 +14,7 @@
 	<h2><span sec:authentication="name"></span>，您好,您的角色有：
 		<span sec:authentication="principal.authorities"></span></h2>
 	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="註銷"/>
+		<input type="submit" value="登出"/>
 	</form>
 </div>
 
