--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -10,7 +10,7 @@
 	<div align="center">
 		<form th:action="@{/userlogin}" method="post">
 			帳號:<input name="user"/><br>
-			密碼:<input name="pwd"><br/>
+			密碼:<input name="pwd" type="password"><br/>
 			<input type="checkbox" name="remeber"> 記住我<br/>
 			<input type="submit" value="登入">
 		</form>
