--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -12,7 +12,7 @@
 		<form th:action="@{/user}" method="post">
 			帳號:<input name="user"/><br>
 			密碼:<input name="pwd" type="password"><br/>
-			<input type="checkbox" name="remeber"> 記住我<br/>
+			<input type="checkbox" name="remember"> 記住我<br/>
 			<input type="submit" value="登入">
 		</form>
 	</div>
